force-app/main/default/objects/FieloPLT__RESTSettings__c/FieloPLT__RESTSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Fielo REST configuration.</description>
    <label>REST Settings</label>
</CustomObject>