force-app/main/default/objects/FieloPLT__RESTSettings__c/fields/FieloPLT__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__OwnerId__c</fullName>
    <description>Owner ID when registering as a new Member.</description>
    <inlineHelpText>Owner ID when registering as a new Member.</inlineHelpText>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>