force-app/main/default/objects/FieloPLT__RESTSettings__c/fields/FieloPLT__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ProfileId__c</fullName>
    <description>User Profile ID. When empty, Fielo REST Profile is completed.</description>
    <inlineHelpText>User Profile ID. When empty, Fielo REST Profile is completed.</inlineHelpText>
    <label>Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>