force-app/main/default/objects/FieloPLT__RESTSettings__c/fields/FieloPLT__RedemptionItemsExternalIds__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RedemptionItemsExternalIds__c</fullName>
    <description>A comma-separated list of fields (API name) to return new fieldsets in the response.</description>
    <inlineHelpText>A comma-separated list of fields (API name) to return new fieldsets in the response.</inlineHelpText>
    <label>Redemption Items External IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>